fix_overflow

--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ svg{
 }
 
 .main{
+  min-width: 600px; 
+  max-width: 800px;
   background-color: var(--terminal-bg);
   position: absolute;
   top: 50%;
@@ -294,13 +296,16 @@ svg{
 }
 
 .terminal{
-  padding: 10px;
+  font-size: 14px;
+  padding: 5px;
   font-family: "Ubuntu Mono", monospace;
   color: var(--text-color);
   height: calc(50vh - 40px);
   overflow-y: scroll;
   overflow-x: hidden;
   transition: 0.3s ease;
+  overflow-x: auto; 
+  
 }
 
 .title{
@@ -547,4 +552,10 @@ u{
 
 #french:hover, #english:hover{
   color : var(--text-accent-color);
+}
+
+@media (max-width: 600px) {
+  .main {
+    width: 95%; 
+  }
 }
